--- a/css/style.css
+++ b/css/style.css
@@ -131,12 +131,14 @@ body {
   height: 100%;
   position: relative;
   text-align: center;
+  padding: 0;
 }
 
 .slider {
   height: calc(100vh - 20vh);
   position: relative;
   color: #e6e6e6;
+  z-index: -1;
 }
 
 .slide {
@@ -156,8 +158,8 @@ body {
   padding: 7vh 2vw 3vh;
   margin: 0 auto;
   opacity: 0;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
 
 .slide p {
@@ -182,7 +184,7 @@ body {
     max-width: 100%;
   }
   .slide .slideImg {
-    width: 90%;
+    width: 80%;
     min-width: 1px;
     height: 70%;
     min-height: 1px;
@@ -464,6 +466,7 @@ body {
   -webkit-transition: 0.3s;
   transition: 0.3s;
   cursor: pointer;
+  overflow: hidden;
 }
 
 .services .serviceBcg h2 {
