--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ ul {
   list-style: none;
 }
 
-.nav-link:focus, .nav-link:hover {
+.nav-link:focus,
+.nav-link:hover {
   color: #e6e6e6;
 }
 
@@ -26,6 +27,7 @@ body {
   min-height: 500vh;
   background: #1a1a1a;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 .longText {
@@ -114,6 +116,9 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   gap: 15px;
 }
 
@@ -379,6 +384,7 @@ body {
   margin-bottom: 1.3rem;
   padding-bottom: 1.3rem;
   border-bottom: 0.5rem solid #008dd2;
+  color: white;
 }
 
 @media all and (max-width: 768px) {
@@ -401,6 +407,7 @@ body {
 
 .services {
   color: white;
+  padding-top: 1rem;
 }
 
 .services .sectionTitle {
@@ -413,12 +420,10 @@ body {
 
 .services .service .wrap {
   background-color: #008dd2;
-  height: 20rem;
   overflow: hidden;
 }
 
 .services .service .wrap .longText {
-  min-height: 20rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -429,7 +434,7 @@ body {
 
 .services .service .wrap .longText p {
   margin-bottom: 0;
-  padding: 1rem;
+  padding: 2rem;
   width: 100%;
 }
 
@@ -458,7 +463,7 @@ body {
 }
 
 .services .serviceBcg {
-  height: 100%;
+  height: 20rem;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -606,6 +611,35 @@ body {
           box-shadow: 0px 0px 28px -9px black;
 }
 
+.popupPricing {
+  width: 80%;
+  margin: 0 auto;
+  color: white;
+  display: -ms-grid;
+  display: grid;
+  gap: 1rem;
+  -ms-grid-columns: auto 3rem auto;
+      grid-template-columns: auto 3rem auto;
+  -ms-grid-rows: auto;
+      grid-template-rows: auto;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  justify-items: center;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+}
+
+.popupPricing span {
+  width: 100%;
+  height: 2px;
+  background-color: #008dd2;
+}
+
+.popupPricing .serviceName {
+  font-weight: bold;
+}
+
 #popupService5 .servicesPopup {
   max-width: 90%;
   min-width: 80%;
@@ -626,5 +660,132 @@ body {
   .servicesPopupWrap .servicesPopup .description {
     margin-bottom: 1.5rem;
   }
+}
+
+.priceList {
+  color: white;
+  padding-top: 1rem;
+}
+
+.priceList .sectionTitle {
+  margin: 3rem auto;
+}
+
+.priceList > .container {
+  -webkit-columns: 2;
+          columns: 2;
+  padding: 2rem;
+}
+
+.priceList > .container > div {
+  -webkit-column-break-inside: avoid;
+          break-inside: avoid;
+  margin-bottom: 2rem;
+}
+
+.priceList > .container h1 {
+  margin-bottom: 2rem;
+}
+
+.priceList > .container .popupPricing {
+  width: 100%;
+  -ms-grid-columns: 40% 20% 40%;
+      grid-template-columns: 40% 20% 40%;
+  padding: 0 1rem;
+}
+
+@media all and (max-width: 768px) {
+  .priceList > .container {
+    display: -ms-grid;
+    display: grid;
+    -ms-grid-columns: 100%;
+        grid-template-columns: 100%;
+    gap: 1rem;
+  }
+}
+
+.contact {
+  color: white;
+  padding-top: 1rem;
+}
+
+.contact .sectionTitle {
+  margin: 3rem auto;
+}
+
+.contact h2 {
+  max-width: 1320px;
+  margin: 0 auto;
+  font-weight: normal;
+  font-size: 1.7rem;
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+.contact .container {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+      grid-template-columns: 1fr 1fr;
+}
+
+@media all and (max-width: 768px) {
+  .contact .container {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+  }
+}
+
+.contact .container .address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 4rem;
+}
+
+.contact .container .address h2 {
+  color: #008dd2;
+}
+
+.contact .container .contactForm {
+  margin-bottom: 4rem;
+}
+
+.contact .container .contactForm form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contact .container .contactForm form > * {
+  border: none;
+  margin-right: 1rem;
+  margin-left: 1rem;
+}
+
+.contact .container .contactForm form input {
+  margin-bottom: 1rem;
+  padding: 0.5rem;
+}
+
+.contact .container .contactForm form button {
+  background-color: #008dd2;
+  padding: 1rem;
+}
+
+.contact .container .contactForm form textarea.text {
+  height: 10rem;
+  margin-bottom: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
