--- a/css/style.scss
+++ b/css/style.scss
@@ -19,7 +19,8 @@ ul {
     list-style: none;
 }
 
-.nav-link:focus, .nav-link:hover {
+.nav-link:focus,
+.nav-link:hover {
     color: $main-bright-grey;
 }
 
@@ -35,7 +36,7 @@ body {
     min-height: 500vh;
     background: $main-dark-grey;
     font-family: 'Poppins', sans-serif;
-
+    overflow-x: hidden;
 }
 
 .longText {
@@ -122,6 +123,7 @@ body {
 .social-media {
     height: 100%;
     align-items: center;
+    justify-content: center;
     gap: 15px;
 
     a {
@@ -390,6 +392,7 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
     margin-bottom: 1.3rem;
     padding-bottom: 1.3rem;
     border-bottom: 0.5rem solid $main-blue;
+    color: white;
 }
 
 @media all and (max-width: 768px) {
@@ -420,6 +423,7 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
 
 .services {
     color: white;
+    padding-top: 1rem;
 
     .sectionTitle {
         margin: 3rem auto;
@@ -433,25 +437,26 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
         background-color: $main-blue;
         // border: 3px solid white;
         // padding: 1rem;
-        height: 20rem;
+        // height: 20rem;
         overflow: hidden;
 
         .longText {
-            min-height: 20rem;
+
             display: flex;
             align-items: center;
 
 
             p {
                 margin-bottom: 0;
-                padding: 1rem;
+                padding: 2rem;
                 width: 100%;
+
             }
         }
 
     }
 
-   
+
 
     .service:hover {
 
@@ -472,20 +477,22 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
         .service .wrap {
             overflow-y: auto;
         }
+
         .service:hover {
 
             .serviceBcg {
                 transform: none;
+
                 h2 {
                     transform: translate(-50%, -50%) scale(100%);
                 }
             }
         }
-    } 
+    }
 
 
     .serviceBcg {
-        height: 100%;
+        height: 20rem;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -588,7 +595,7 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
         .popupPricing {
             width: 80%;
             margin: 0 auto;
-            
+
             display: grid;
             gap: 1rem;
             grid-template-columns: auto 3rem auto;
@@ -631,6 +638,32 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
     }
 }
 
+.popupPricing {
+    width: 80%;
+    margin: 0 auto;
+    color: white;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: auto 3rem auto;
+    grid-template-rows: auto;
+    align-items: center;
+    justify-items: center;
+    justify-content: space-around;
+
+
+
+    span {
+        width: 100%;
+        height: 2px;
+        background-color: $main-blue;
+
+    }
+
+    .serviceName {
+        font-weight: bold;
+    }
+}
+
 
 #popupService5 {
 
@@ -649,7 +682,7 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
 @media all and (max-width: 1399px) {
     .servicesPopupWrap {
 
-        .servicesPopup{
+        .servicesPopup {
             p {
                 font-size: 0.8rem;
             }
@@ -665,15 +698,118 @@ $slideImgClipPath3: polygon(41% 4%, 100% 19%, 92% 87%, 3% 89%, 0 39%);
 
         }
     }
-
-   
-
+}
 
 
+// price list
+
+.priceList {
+
+    color: white;
+    padding-top: 1rem;
+
+    .sectionTitle {
+        margin: 3rem auto;
+    }
+
+    &>.container {
+        columns: 2;
+        padding: 2rem;
+        
+        &>div {
+            break-inside: avoid;
+            margin-bottom: 2rem;
+        }
+
+        h1 {
+            margin-bottom: 2rem;
+        }
+
+        .popupPricing {
+            width: 100%;
+            grid-template-columns: 40% 20% 40%;
+            padding: 0 1rem;
+        }
+    }
+}
+
+@media all and (max-width: 768px) {
+    .priceList>.container {
+        display: grid;
+        grid-template-columns: 100%;
+        gap: 1rem;
+    }
+}
 
 
+// contact
+
+.contact {
+    color: white;
+    padding-top: 1rem;
+    .sectionTitle {
+        margin: 3rem auto;
+    }
+
+    h2 {
+        max-width: 1320px;
+        margin: 0 auto;
+        font-weight: normal;
+        font-size: 1.7rem;
+        margin-bottom: 4rem;
+        text-align: center;
+    }
+
+    .container {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        @media all and (max-width: 768px) {
+            grid-template-columns: 1fr;
+        }
+
+        .address {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-bottom: 4rem;
+            h2 {
+                color: $main-blue;
+            }
+        }
+        .contactForm {
+            margin-bottom: 4rem;
+            form {
+                display: flex;
+                flex-direction: column;
+
+                &>* {
+                    border: none;
+                    margin-right: 1rem;
+                    margin-left: 1rem;
+                }
+                input {
+                    margin-bottom: 1rem;
+                    // text-align: center;
+                    padding: 0.5rem;
+                    
+                }
+    
+                button {
+                    background-color: $main-blue;
+                    padding: 1rem;
+
+                }
+
+                textarea.text {
+                    height: 10rem;
+                    margin-bottom: 1rem;
+                }
+            }
+            
+            
 
 
-
+        }
+    }
 
 }
